variables.RunFour.scala.error
Compilation error:
RunFour:3: error: Int does not take parameters
while(baggleCount() < 4) {
                 ^